--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "element-ui": "^2.13.0",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
