--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.13.0",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
+    "vue-print-nb": "^1.4.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
