--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.6.1",
     "vue-print-nb": "^1.4.0",
     "vue-router": "^3.0.1"
   },
